improve blockstyle docs

--- a/components/ui/BlockStyle/Blockstyle.mdx
+++ b/components/ui/BlockStyle/Blockstyle.mdx
@@ -9,12 +9,11 @@ Used to render block contents from Sanity. Commonly used for blogs.
 
 ## Usage:
 
-```
+```tsx
 import { PortableText } form 'lib/sanity.ts'
 import { defaultBlockStyle } from 'helper/index.ts'
 
 <PortableText value={value} component={defaultBlockStyle} />
-
 ```
 
 ### Default Block Styles
@@ -23,7 +22,7 @@ import { defaultBlockStyle } from 'helper/index.ts'
 
 ## Custom elements:
 
-```
+```tsx
 import { PortableText } form 'lib/sanity.ts'
 import { defaultBlockStyle } from 'helper/index.ts'
 
